Fix bottom spacing on availability tag

--- a/app/styles/_project.scss
+++ b/app/styles/_project.scss
@@ -7,6 +7,7 @@
     display: inline-block;
     border-radius: 6px;
     margin-right: 10px;
+    margin-bottom: 10px;
   }
 
   #atar-button {
